--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon express.js"
+        "start": "nodemon server.js"
     },
     "repository": {
         "type": "git",
@@ -20,7 +20,8 @@
     "homepage": "https://github.com/Andrey-Matanov/geekbrains_js_level2#readme",
     "dependencies": {
         "cors": "^2.8.5",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "vue-resource": "^1.5.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.6"
